--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/blk-design-system-react/issues"
   },
-  "homepage": "https://loginrrb.github.io/test-sit.io/",
+  "homepage": "https://loginrrb.github.io/test-sit.io",
   "keywords": [
     "react",
     "reactjs",
